feat!: updating to Java 21